--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "couchdb": "^0.3.8",
     "mongoose": "^5.10.0",
     "nano": "^8.2.2",
+    "node": "^16.13.1",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
     "react-redux": "^7.2.0",
